tui/internal/devserver/testdata/modules/valid_simple/go.mod
module github.com/rumor-ml/testmodule-valid

go 1.21
