tui/internal/devserver/testdata/modules/invalid_syntax_error/go.mod
module github.com/rumor-ml/testmodule-syntax-error

go 1.21
